welcome.lessons.welcome.methods.flowerpot.FlowerPot.scala.error
FlowerPot:3: error: method growFlowers overrides nothing
override def growFlowers(){fleur(Color.CYAN)} 
             ^